[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
gif = "0.13.1"
thiserror = "2.0.9"
image = { version = "0.25.0" }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
